# cpp-ffmpeg

./: CMakeLists.txt  README.md  build_on_win32.bat  cmake_by_vs.bat  vcpkg.json
example/: CMakeLists.txt
example/decode/: CMakeLists.txt  decode.cpp
example/remuxing/: CMakeLists.txt  remuxing.cpp
src/: adts_header.h  ffmpeg_wrapper.h  main.cpp  remuxing.cpp
src/cppffmpeg/: CMakeLists.txt  ffmpeg_wrapper.h  memory_leak_detector.h  my_file.cpp  my_file.h
